objects/agf__PPM_Program__c.object
<CustomObject>
    <fields>
        <fullName>agf__End_Date__c</fullName>
        <description>End Date for the Program.</description>
        <inlineHelpText>End Date for the Program.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Executive_Sponsor__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>agf__PPM_Portfolio__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Program_Goals__c</fullName>
        <label>Program Goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Program_Health_Comments__c</fullName>
        <description>Indicate the program health comments.</description>
        <inlineHelpText>Indicate the program health comments.</inlineHelpText>
        <label>Program Health Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Program_Health__c</fullName>
        <label>Program Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#BBBBBB</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>On Track</fullName>
                    <color>#419249</color>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Watch</fullName>
                    <color>#F3D904</color>
                    <label>Watch</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <color>#CC0000</color>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#3366FF</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <color>#000000</color>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#999999</color>
                    <label>On Hold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Program_Manager__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Program_Summary__c</fullName>
        <label>Program Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Start_Date__c</fullName>
        <description>Start Date for the Program or Close Date.</description>
        <inlineHelpText>Start Date for the Program or Close Date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>